<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp">
    
	<!--TextView 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/table_header_accelerometer"
	    android:textAppearance="@android:style/TextAppearance.Medium"
	    android:textStyle="bold"
	    />
	<TableLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="10dp"
	    >
	    <TableRow android:paddingBottom="10dip">
	        <TextView 
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:paddingRight="10dp"
	            android:gravity="right"
	            android:textStyle="bold"
	            android:text="@string/table_row_accuracy"
	            />
	        <TextView
	            android:id="@+id/textViewAccuracy"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/value_na"
	            />
	    </TableRow>
	</TableLayout-->
	
	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/table_header_pm25"
	    android:textAppearance="@android:style/TextAppearance.Medium"
	    android:textStyle="bold"
	    />
	
	<TableLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="10dp"
	    >
	    
	    <TableRow>
	        <TextView 
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:paddingRight="10dp"
	            android:gravity="right"
	            android:textStyle="bold"
	            android:text="@string/table_row_pm25"
	            />
	        <TextView
	            android:id="@+id/textViewPm25"
	            android:layout_width="fill_parent" 
	            android:layout_height="wrap_content"
	            android:text="@string/value_na"
	            />
	    </TableRow>
	    <TableRow>
	        <TextView 
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:paddingRight="10dp"
	            android:gravity="right"
	            android:textStyle="bold"
	            android:text="@string/table_row_pm10"
	            />
	        <TextView
	            android:id="@+id/textViewPm10"
	            android:layout_width="fill_parent" 
	            android:layout_height="wrap_content"
	            android:text="@string/value_na"
	            />
	    </TableRow>
	    
	</TableLayout>
	
	    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/table_header_bluetooth"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textStyle="bold"
            />

    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            >

        <TableRow>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:gravity="right"
                    android:textStyle="bold"
                    android:text="@string/table_row_state"
                    />
            <TextView
                    android:id="@+id/textViewState"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/value_na"
                    />
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:gravity="right"
                    android:textStyle="bold"
                    android:text="@string/table_row_target"
                    />
            <TextView
                    android:id="@+id/textViewTarget"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/value_na"
                    />
        </TableRow>

    </TableLayout>
    <Button
        android:id="@+id/button_inquiry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_inquiry" />
    
</LinearLayout>
